--- a/index.html
+++ b/index.html
@@ -30,12 +30,18 @@
     </div>
 </section>
 
-<section>
-    
+<section class="section3">
+    <div class="container">
+        <div class="col col1"></div>
+        <div class="col col2"></div>
+    </div>
 </section>
 
-<section>
-    
+<section class="section4">
+    <div class="container">
+        <div class="col col1"></div>
+        <div class="col col2"></div>
+    </div> 
 </section>
 
 <section>
