--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
     </div> 
 </section>
 
-<section>
-    
+<section class="section5">
+    <div class="container">
+        <div class="col col1"></div>
+    </div>
 </section>
 
 <footer>
