re-factoring old code: done;

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     
 <header class="header">
     <div class="container">
-        <div class="col col1"></div>
-        <div class="col col2"></div>
-        <div class="col col3"></div>
+        <div class="row">
+            <div class="col col1"></div>
+            <div class="col col2"></div>
+            <div class="col col3"></div>
+        </div>
     </div>
 </header>
 
@@ -25,28 +27,36 @@
 
 <section class="section2">
     <div class="container">
-        <div class="col col1"></div>
-        <div class="col col2"></div>
+        <div class="row">
+            <div class="col col1"></div>
+            <div class="col col2"></div>
+        </div>
     </div>
 </section>
 
 <section class="section3">
     <div class="container">
-        <div class="col col1"></div>
-        <div class="col col2"></div>
+        <div class="row row-reversee">
+            <div class="col col1"></div>
+            <div class="col col2"></div>
+        </div>
     </div>
 </section>
 
 <section class="section4">
     <div class="container">
-        <div class="col col1"></div>
-        <div class="col col2"></div>
+        <div class="row">
+            <div class="col col1"></div>
+            <div class="col col2"></div>
+        </div>
     </div> 
 </section>
 
 <section class="section5">
     <div class="container">
-        <div class="col col1"></div>
+        <div class="row">
+            <div class="col col1"></div>
+        </div>
     </div>
 </section>
 
@@ -54,18 +64,22 @@
 
 <section class="footer1">
     <div class="container">
-        <div class="col col1"></div>
-        <div class="col col2"></div>
-        <div class="col col3"></div>
-        <div class="col col4"></div>
-        <div class="col col5"></div>
+        <div class="row">
+            <div class="col col1"></div>
+            <div class="col col2"></div>
+            <div class="col col3"></div>
+            <div class="col col4"></div>
+            <div class="col col5"></div>
+        </div>
     </div>
 </section>
 <hr>
 <section class="footer2">
     <div class="container">
-        <div class="tasto logo"></div>
-        <div class="tasto button"></div>
+        <div class="row">
+            <div class="tasto logo"></div>
+            <div class="tasto button"></div>
+        </div>
     </div>
 </section>
 
