--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
 <header class="header">
     <div class="container">
         <div class="row">
-            <div class="col col1"></div>
-            <div class="col col2"></div>
-            <div class="col col3"></div>
+            <div class="col col1">
+                <img src="img/logo.svg" alt="Logo Discord">
+            </div>
+            <div class="col col2">
+                <ul>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perché Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
+            </div>
+            <div class="col col3">
+                <a href="#">Accedi</a>
+            </div>
         </div>
     </div>
 </header>
@@ -61,27 +73,26 @@
 </section>
 
 <footer class="footer">
-
-<section class="footer1">
-    <div class="container">
-        <div class="row">
-            <div class="col col1"></div>
-            <div class="col col2"></div>
-            <div class="col col3"></div>
-            <div class="col col4"></div>
-            <div class="col col5"></div>
+    <section class="footer1">
+        <div class="container">
+            <div class="row">
+                <div class="col col1"></div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col4"></div>
+                <div class="col col5"></div>
+            </div>
         </div>
-    </div>
-</section>
-<hr>
-<section class="footer2">
-    <div class="container">
-        <div class="row">
-            <div class="tasto logo"></div>
-            <div class="tasto button"></div>
+    </section>
+    <hr>
+    <section class="footer2">
+        <div class="container">
+            <div class="row">
+                <div class="tasto logo"></div>
+                <div class="tasto button"></div>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
 </footer>
 
