--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="col col1">
                 <img src="img/logo.svg" alt="Logo Discord">
             </div>
-            <div class="col col2">
+            <nav class="col col2">
                 <ul>
                     <li><a href="#">Scarica</a></li>
                     <li><a href="#">Perché Discord</a></li>
@@ -23,7 +23,7 @@
                     <li><a href="#">Sicurezza</a></li>
                     <li><a href="#">Assistenza</a></li>
                 </ul>
-            </div>
+            </nav>
             <div class="col col3">
                 <a href="#">Accedi</a>
             </div>
@@ -33,7 +33,18 @@
 
 <section class="section1">
     <div class="container">
-        <div class="col col1"></div>
+        <div class="col col1">
+            <h1>
+                Il tuo posto per parlare
+            </h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos modi vel suscipit fugit. Quis, iure perspiciatis. Doloribus pariatur neque veritatis aperiam error eos illum ullam unde eaque laborum officia minima, qui ex quibusdam, natus quo.
+            </p>
+            <div class="download-buttons">
+                <a href="#" id="download-button">* Scarica per Mac</a>
+                <a href="#" id="open-button">Apri Discord nel tuo browser</a>
+            </div>
+        </div>
     </div>
 </section>
 
