--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <section class="section1">
     <div class="container">
         <div class="col col1">
-            <h1>
+            <h2>
                 Il tuo posto per parlare
-            </h1>
+            </h2>
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos modi vel suscipit fugit. Quis, iure perspiciatis. Doloribus pariatur neque veritatis aperiam error eos illum ullam unde eaque laborum officia minima, qui ex quibusdam, natus quo.
             </p>
@@ -51,8 +51,17 @@
 <section class="section2">
     <div class="container">
         <div class="row">
-            <div class="col col1"></div>
-            <div class="col col2"></div>
+            <div class="col col1">
+                <img src="img/item1.svg" alt="Study group picture">
+            </div>
+            <div class="col col2">
+                <h2>
+                    Un luogo a invito con tutto lo spazio necessario per parlare
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, non. Omnis quos laudantium enim tenetur corporis reiciendis pariatur eveniet dolorum sequi, totam magnam odio hic.
+                </p>
+            </div>
         </div>
     </div>
 </section>
@@ -60,8 +69,17 @@
 <section class="section3">
     <div class="container">
         <div class="row row-reversee">
-            <div class="col col1"></div>
-            <div class="col col2"></div>
+            <div class="col col1">
+                <img src="img/item2.svg" alt="vocal chat picture">
+            </div>
+            <div class="col col2">
+                <h2>
+                    Dove trovarsi è facile
+                </h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam sunt similique perspiciatis molestias temporibus ratione quis praesentium quaerat. Rem, pariatur?
+                </p>
+            </div>
         </div>
     </div>
 </section>
@@ -69,8 +87,17 @@
 <section class="section4">
     <div class="container">
         <div class="row">
-            <div class="col col1"></div>
-            <div class="col col2"></div>
+            <div class="col col1">
+                <img src="img/item3.svg" alt="chat picture">
+            </div>
+            <div class="col col2">
+                <h2>
+                    Da pochi a un fandom
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, quia. Quod sapiente neque vel illo tempore libero perferendis impedit quisquam? Fugiat sapiente tempora natus soluta.
+                </p>
+            </div>
         </div>
     </div> 
 </section>
@@ -78,7 +105,19 @@
 <section class="section5">
     <div class="container">
         <div class="row">
-            <div class="col col1"></div>
+            <div class="col col1">
+                <h2>
+                    Tecnologia affidabile per tenersi in contatto
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae corrupti reprehenderit magni, nesciunt voluptates ipsum id veritatis dicta temporibus in eveniet a eum accusantium neque?
+                </p>
+                <img src="img/item4-big.svg" alt="Tablet & mobile picture">
+                <h3>
+                    Pronto a iniziare la tua avventura?
+                </h3>
+                <a href="#">* Scarica per Mac</a>
+            </div>
         </div>
     </div>
 </section>
