--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos modi vel suscipit fugit. Quis, iure perspiciatis. Doloribus pariatur neque veritatis aperiam error eos illum ullam unde eaque laborum officia minima, qui ex quibusdam, natus quo.
             </p>
             <div class="download-buttons">
-                <a href="#" id="download-button">* Scarica per Mac</a>
+                <a href="#" class="download-button">  Scarica per Mac</a>
                 <a href="#" id="open-button">Apri Discord nel tuo browser</a>
             </div>
         </div>
@@ -116,7 +116,7 @@
                 <h3>
                     Pronto a iniziare la tua avventura?
                 </h3>
-                <a href="#">* Scarica per Mac</a>
+                <a href="#" class="download-button"> Scarica per Mac</a>
             </div>
         </div>
     </div>
@@ -126,11 +126,55 @@
     <section class="footer1">
         <div class="container">
             <div class="row">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col4"></div>
-                <div class="col col5"></div>
+                <div class="col col1">
+                    <h3>Il tuo posto per parlare</h3>
+                    <p>Italiano</p>
+                    <div class="social">4 loghi</div>
+                </div>
+                <div class="col col2">
+                    <h4>Prodotto</h4>
+                    <ul>
+                        <li><a href="">Scarica</a></li>
+                        <li> <a href="#">Perché Discord</a></li>
+                        <li> <a href="#">Nitro</a></li>
+                        <li> <a href="#">Sicurezza</a></li>
+                        <li> <a href="#">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="col col3">
+                    <h4>Compagnia</h4>
+                    <ul>
+                        <li> <a href="#">Chi siamo</a></li>
+                        <li> <a href="#">Lavora con noi</a></li>
+                        <li> <a href="#">Marchio</a></li>
+                        <li> <a href="#">Redazione</a></li>
+                        <li> <a href="#">Negozio</a></li>
+                    </ul>
+                </div>
+                <div class="col col4">
+                    <h4>Risorse</h4>
+                    <ul>
+                        <li> <a href="#">Scarica</a></li>
+                        <li> <a href="#">Perché Discord</a></li>
+                        <li> <a href="#">Nitro</a></li>
+                        <li> <a href="#">Sicurezza</a></li>
+                        <li> <a href="#">Assistenza</a></li>
+                        <li> <a href="#">Scarica</a></li>
+                        <li> <a href="#">Perché Discord</a></li>
+                        <li> <a href="#">Nitro</a></li>
+                        <li> <a href="#">Sicurezza</a></li>
+                        <li> <a href="#">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="col col5">
+                    <h4>Norme</h4>
+                    <ul>
+                        <li> <a href="#">Chi siamo</a></li>
+                        <li> <a href="#">Lavora con noi</a>i</li>
+                        <li> <a href="#">Marchio</a></li>
+                        <li> <a href="#">Redazione</a></li>
+                        <li> <a href="#">Negozio</a> </li>
+                </div>
             </div>
         </div>
     </section>
@@ -138,8 +182,8 @@
     <section class="footer2">
         <div class="container">
             <div class="row">
-                <div class="tasto logo"></div>
-                <div class="tasto button"></div>
+                <img src="img/logo.svg" alt="Logo Discord">
+                <a href class="tasto button">Registrati</a>
             </div>
         </div>
     </section>
