quasi ultime cose: done;

--- a/index.html
+++ b/index.html
@@ -129,7 +129,12 @@
                 <div class="col col1">
                     <h3>Il tuo posto per parlare</h3>
                     <p>Italiano</p>
-                    <div class="social">4 loghi</div>
+                    <div class="social">
+                        <a href="#" class="logo twitter">T</a>
+                        <a href="#" class="logo instagram">I</a>
+                        <a href="#" class="logo facebook">F</a>
+                        <a href="#" class="logo youtube">Y</a>
+                    </div>
                 </div>
                 <div class="col col2">
                     <h4>Prodotto</h4>
